solved scrollbar problem

--- a/trunk/circle_property/css/base.css
+++ b/trunk/circle_property/css/base.css
@@ -298,3 +298,8 @@ input:disabled {
 #system_logout {
     cursor: pointer;
 }
+
+.modal-backdrop
+{
+    width: 99%
+}
